--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -1,6 +1,8 @@
 <header>
   <div class="container">
-    <a routerLink="/" class="logo">Боже Име</a>
+    <a routerLink="/" class="logo">
+     Боже Име
+    </a>
     <nav>
       <ul>
         <li>
