Cart Page and not found

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -18,7 +18,8 @@
         </li>
         <li>
           <a routerLink="/cart-page">
-            Cart <span>3</span>
+            <i class="fa fa-shopping-cart"></i>
+            <span>{{cartTotalPrice | currency}}</span>
           </a>
         </li>
       </ul>
