--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,20 +1,24 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+
+*{
   box-sizing: border-box;
 }
 
-html {
-  font-size: 16px;
+html{
+  font-size:16px;
 }
 
 html,
-button {
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+button{
+  font-family: "Quicksand", "sans-serif";
 }
 
-body {
+body{
   margin: 0;
 }
 
-a {
+a{
   text-decoration: none;
 }
