--- a/frontend/src/app/components/pages/food-page/food-page.component.html
+++ b/frontend/src/app/components/pages/food-page/food-page.component.html
@@ -1,4 +1,10 @@
-<div class="container">
+<app-not-found
+  [visible]="!food.id"
+  notFoundMessage = "Food not found or is no longer served"
+  resetLinkText = "Back to Home Page"
+></app-not-found>
+
+<div *ngIf="food.id" class="container">
   <img [src]="food.imageUrl" [alt]="food.name"/>
 
   <div class="details">
@@ -34,7 +40,7 @@
       </span>
     </div>
 
-    <button>Add To Cart</button>
+    <button (click)="addToCart()">Add To Cart</button>
 
   </div>
 </div>
