--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -2,6 +2,7 @@
 <app-not-found
   [visible]="!cart || !cart.items.length"
   notFoundMessage = "Cart Is Empty"
+  resetLinkText = "Go to Home Page"
 ></app-not-found>
 
 <div *ngIf="cart && cart.items.length" class="container">
