--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -9,18 +9,22 @@
     [showErrorsWhen]="isSubmitted"
     type="email"
     label="Email">
-    </text-input>
+  </text-input>
 
-    <text-input
-    [control]="fc.password"
-    [showErrorsWhen]="isSubmitted"
-    type="password"
-    label="Password">
-    </text-input>
+  <text-input
+  [control]="fc.password"
+  [showErrorsWhen]="isSubmitted"
+  type="password"
+  label="Password">
+</text-input>
 
-    <default-button text="Login">
-    </default-button>
-
+    <default-button text="Login"></default-button>
+    <div class="register">
+      New user? &nbsp;
+      <a routerLink="/register-page" [queryParams]="{returnUrl : returnUrl}">
+        Register here
+      </a>
+    </div>
     </form>
   </div>
 </div>
