--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,10 +5,33 @@
 *{
   box-sizing: border-box;
 }
-
-html{
-  font-size:14px;
+@media (min-width:320px)  {
+   /* smartphones, iPhone, portrait 480x320 phones */
+   html{
+    font-size:12px;
+  }
 }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  {
+  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+  html{
+    font-size:16px;
+  }
+}
+@media (min-width:961px)  {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+  html{
+    font-size:18px;
+  }
+}
+@media (min-width:1025px) {
+   /* big landscape tablets, laptops, and desktops */
+   html{
+    font-size:20px;
+  }
+}
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
+
 
 html,
 button{
