Have no clue how to name this

--- a/frontend/src/app/components/partials/map/map.component.html
+++ b/frontend/src/app/components/partials/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <button class="find-location" (click)="findMyLocation()">
+    <button *ngIf="!readonly" (click)="findMyLocation()">
         Find my location
     </button>
     <div #map class="map"></div>
