Protected Login/Register pages

--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -5,18 +5,20 @@ ul {
   flex-wrap: wrap;
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 li a {
   height: 22.5rem;
-  width: 20rem;
+  width: 90%;
   border: 1px solid whitesmoke;
-  border-radius: 1rem;
+  border-radius: 0.7rem;
   margin: 0.5rem;
   display: flex;
   flex-direction: column;
   overflow: hidden;
   color: #e72929;
+
 }
 
 li a:hover {
@@ -74,6 +76,7 @@ li a img {
 }
 
 .price {
+  font-weight: bolder;
   position: absolute;
   bottom: 0;
   left: 0.9rem;
@@ -81,6 +84,6 @@ li a img {
   padding: 0.3rem 100% 0 0;
   color: #414141;
   margin-top: 0.7rem;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
