--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -1,10 +1,16 @@
 <header>
   <div class="container">
     <a routerLink="/" class="logo">
-     Боже Име
+     Soft-Uni Food
     </a>
     <nav>
       <ul>
+        <div *ngIf="isAdmin" >
+          <a routerLink="/admin">Orders</a>
+          <a routerLink="/admin">Users</a>
+          <a routerLink="/admin">Foods</a>
+          <a routerLink="/admin">Finance</a>
+        </div>
         <li *ngIf="!isAuth">
           <a routerLink="/login-page">Login</a>
         </li>
@@ -12,7 +18,6 @@
           <a>{{user.name}}</a>
           <div class="menu">
             <a routerLink="/profile-page">Profile</a>
-            <a *ngIf="isAdmin" routerLink="/admin">Admin Panel</a>
             <a (click)="logout()">Logout</a>
           </div>
         </li>
