--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -7,8 +7,8 @@
       <ul>
         <div *ngIf="isAdmin" >
           <a routerLink="/admin">Orders</a>
-          <a routerLink="/admin">Users</a>
-          <a routerLink="/admin">Foods</a>
+          <a routerLink="/users-page">Users</a>
+          <a routerLink="/foods-page">Foods</a>
           <a routerLink="/admin">Finance</a>
         </div>
         <li *ngIf="!isAuth">
