--- a/frontend/src/app/components/pages/admin-dashboard/admin-dashboard.component.css
+++ b/frontend/src/app/components/pages/admin-dashboard/admin-dashboard.component.css
@@ -1,25 +1,32 @@
-.order {
-    font-size: 1.2rem;
-    border-radius: 15px;
-    padding: 1rem;
-    width: 80%;
-    background: #ff4d4d;
-    color: white;
-    background-color: #e72929;
-
-
-    opacity: 0.8;
-    font-size: 1.3rem;
-    border: none;
-    border-radius: 0.5rem;
-    box-shadow: 2px 2px 2px 2px grey;
+table {
+    width: 100%;
+    margin: auto;
 }
-li {
-    list-style: none;
-}
-
-
-.order:hover{
-    opacity: 1;
-    cursor: pointer;
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
   }
+
+tr {
+  opacity: 1;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+
+
+tr:hover {
+  cursor: pointer;
+  opacity: 0.7;
+  color: blue;
+}
+
+tr:nth-child(1) {
+  cursor:initial;
+  color: black;
+  font-weight: bold;
+  opacity: 1;
+}
